adding extra feilds in user schema
